--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the playlists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.playlist-container {
+    margin-top: 40px;
+    background-color: #F3F3F3;
+    padding: 20px;
+}
+
+#ytplayer {
+    height: 356px;
+}
